# py-haier-ac-remote

./: .gitignore  haierac.py  pyproject.toml  test.py
haierlib/: ac_types.py  commands.py  encoders.py  parsers.py
